# ziloo-firmware

./: .etckeeper  .fstab  .gitattributes  .gitignore  .gitmodules  CONTINUOUS_INTEGRATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  fstab  group  group-  gshadow  gshadow-  hostname  hosts  imx-5.15.5-1.0.0.xml  imx-5.15.5-1.0.0_experientials.xml  inetd.conf  machine-id  mailcap  passwd  passwd-  resolv.conf  shadow  shadow-
alternatives/: display  java  jexec  jexec-binfmt  jjs  keytool  pack200  rmid  rmiregistry  unpack200
boards/: rockchip.Dockerfile
boards/rv1109/samples/ArcFace_RV1109_SDK/samplecode/ASFTestDemo/: CMakeLists.txt  samplecode.cpp
boards/rv1109/samples/ArcFace_RV1109_SDK/samplecode/ASFTestDemo/inc/: arcsoft_face_sdk.h
cups/: printers.conf
device/: MANIFEST.md  README.md  authorized_keys  base-builder.Dockerfile  build_rv1109-ai-uvc.sh  builder-all-in-one.Dockerfile  builder-imx8.Dockerfile  imx-5.10.72-2.2.2.xml
docs/: AUTO_FIRMWARE.md  BOOT-PARTITION.md  CONTINUOUS_INTEGRATION.md  DEVELOP.md  LINODE.md  RESEARCH.md  RPI-INSTALL.md  SD-CARD.md  TESTING_FIRMWARE.md  package-list.txt
etc/: README.md  bash-setup.sh  bitbake-with-setup  build-examples.sh  download-dist.sh  get-mcuxsdk.sh  inside-docker  install-genimage.sh  requirements-ci.txt  setup-bitbake  setup-rpi-builder.sh
firmware-builder/: README.md  builder.Dockerfile  ziloo-firmware-builder.Dockerfile
hp/: hplip.conf
java-11-openjdk/: jvm-armhf.cfg
lightdm/: pi-greeter.conf
plymouth/: plymouthd.conf
pulse/: default.pa
ssh/: ssh_host_dsa_key  (+7 more)
xml/: catalog  (+1 more)
(+190 files in other folders)
